<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:padding="24dp"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TitleTextStyle"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlay"
        style="@style/MainButton"
        android:layout_marginTop="100dp"
        android:text="@string/start_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnHowToPlay"
        style="@style/MainButton"
        android:text="@string/rules"
        app:layout_constraintTop_toBottomOf="@id/btnPlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSettings"
        style="@style/MainButton"
        android:text="@string/settings"
        app:layout_constraintTop_toBottomOf="@id/btnHowToPlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnHistory"
        style="@style/MainButton"
        android:text="@string/history"
        app:layout_constraintTop_toBottomOf="@id/btnSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnExit"
        style="@style/MainButton"
        android:text="@string/exit"
        app:layout_constraintTop_toBottomOf="@id/btnHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
