<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogExitGameRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_panel"
    android:orientation="vertical"
    android:padding="22dp">

    <TextView
        android:id="@+id/tvExitGameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:shadowColor="#80000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="@string/exit_game_title"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvExitGameMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/exit_game_message"
        android:textColor="#F2FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmExit"
        style="@style/DialogSecondaryButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/exit_game_confirm" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancelExit"
        style="@style/PrimaryGameButton"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:text="@string/exit_game_cancel" />

</LinearLayout>