<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_panel"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_team_name_title"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:shadowColor="#80000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etTeamName"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_dialog_input"
        android:hint="@string/team_name"
        android:inputType="textPersonName"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:textColor="@android:color/black"
        android:textColorHint="#805A3700"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvDialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        style="@style/PrimaryGameButton"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/etTeamName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        style="@style/DialogSecondaryButton"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="8dp"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/etTeamName"
        app:layout_constraintStart_toEndOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>