<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/gameRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@drawable/bg_gradient">

    <FrameLayout
        android:id="@+id/topZone"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guessed"
            android:textColor="@color/correctGreen"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center" />
    </FrameLayout>

    <TextView
        android:id="@+id/wordCard"
        android:layout_width="295dp"
        android:layout_height="195dp"
        android:gravity="center"
        android:text="@string/word"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:elevation="4dp"
        android:background="@drawable/bg_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/bottomZone"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textColor="@color/wrongRed"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
